fixed more of the styling issues including the avatar tweet name and handle spacing of the tweet

--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -73,3 +73,8 @@ color: red;
     border: 5px red solid;
     
 }
+.userdata{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
